--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -28,12 +28,14 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/animeSearchBar"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="0dp"
                     android:layout_height="56dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
                     android:hint="@string/anime"
+                    android:transitionName="@string/search"
                     app:boxCornerRadiusBottomEnd="28dp"
                     app:boxCornerRadiusBottomStart="28dp"
                     app:boxCornerRadiusTopEnd="28dp"
@@ -42,11 +44,13 @@
                     app:hintAnimationEnabled="true">
 
                     <AutoCompleteTextView
+                        android:id="@+id/animeSearchBarText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:focusable="false"
                         android:fontFamily="@font/poppins_bold"
-                        android:inputType="textPersonName"
+                        android:inputType="none"
                         android:padding="8dp"
                         android:textColor="?android:attr/textColorSecondary"
                         android:textSize="14sp"
@@ -61,7 +65,7 @@
                     app:cardCornerRadius="32dp">
 
                     <ImageView
-                        android:id="@+id/homeUserAvatar"
+                        android:id="@+id/animeUserAvatar"
                         android:layout_width="52dp"
                         android:layout_height="52dp"
                         android:scaleType="center"
