--- a/app/src/main/res/layout/item_media_compact.xml
+++ b/app/src/main/res/layout/item_media_compact.xml
@@ -8,8 +8,8 @@
     android:layout_marginTop="-12dp"
     android:layout_marginEnd="-12dp"
     android:clipToPadding="false"
+    android:gravity="center"
     android:orientation="vertical">
-
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
                     android:layout_marginStart="2dp"
                     android:fontFamily="@font/poppins_bold"
                     android:paddingTop="2dp"
-                    android:textColor="?attr/colorOnPrimary"
+                    android:textColor="@color/bg_white"
                     android:textSize="12sp"
                     tools:ignore="TextContrastCheck"
                     tools:text="0.0" />
